--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y lcov doctest
+        sudo apt-get install -y lcov doctest-dev
 
     - name: Run coverage.sh
       run: |
