fix(Makefile): add -Wreturn-local-addr flag to CXXFLAGS to enhance compiler warnings for potential issues with returning local addresses

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -11,7 +11,8 @@ CXXFLAGS += -Werror=uninitialized \
     -Wmissing-declarations \
     -Wold-style-cast \
     -Werror=vla \
-    -Wnon-virtual-dtor
+    -Wnon-virtual-dtor \
+	-Wreturn-local-addr
 CXXFLAGS += -fsanitize=address,undefined,bounds
 
 LDFLAGS :=
