refactor: split .hpp to .hpp & .cpp, now this repo is not header-only

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 tests/bin
 tests/coverage
+.cache/*
+build/*
+compile_commands.json
+libkstring_debug.a
+libkstring_debug.so
+libkstring.a
+libkstring.so
+
