--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,10 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y lcov doctest-dev
 
+    - name: build objects and lib
+      run: |
+        make clean && make
+
     - name: Run coverage.sh
       run: |
         cd tests
