--- a/tests/Makefile
+++ b/tests/Makefile
@@ -45,7 +45,7 @@ all: test
 # 编译和运行测试
 test: $(SRC)
 ifneq ($(wildcard $(SRC)),)
-	$(CXX) $(SRC) $(CXXFLAGS) $(LDFLAGS) -o $(BIN)
+	$(CXX) $(SRC) $(CXXFLAGS) $(CONV_CXXFLAGS) $(LDFLAGS) -o $(BIN)
 	./$(BIN)
 else
 	@echo "❌ Error: $(SRC) not found. Please check if '$(TEST_SRC_NAME).cpp' exists."
@@ -57,7 +57,7 @@ coverage: $(SRC)
 ifneq ($(wildcard $(SRC)),)
 	$(CXX) $(SRC) $(CXXFLAGS) $(CONV_CXXFLAGS) $(LDFLAGS) -o $(BIN)
 	./$(BIN)
-	lcov --capture --directory ./$(BIN_DIR)/$(TEST_DIR_NAME)  --directory ../build/debug --output-file $(COVERAGE_DIR)/$(TEST_DIR_NAME)/coverage.info --config-file $(PWD)/.lcovrc --ignore-errors unused
+	lcov --capture --directory ./$(BIN_DIR)/$(TEST_DIR_NAME) --directory ../build/debug --output-file $(COVERAGE_DIR)/$(TEST_DIR_NAME)/coverage.info --config-file $(PWD)/.lcovrc --ignore-errors unused
 	genhtml $(COVERAGE_DIR)/$(TEST_DIR_NAME)/coverage.info --output-directory $(COVERAGE_DIR)/$(TEST_DIR_NAME)
 	@echo "Coverage report generated for $(TEST) in $(COVERAGE_DIR)/$(TEST)"
 else
