refactor: rename Ill_CODEPOINT to ILL_CODEPOINT for consistency and clarity refactor: change variable name cp to codepoint for better readability refactor: update KChar and UTF8Decoded to use codepoint instead of cp for consistency refactor: remove unused char_indices function from KStr refactor: update decode_all and decode_range to return CodePoint instead of UTF8Decoded for better clarity refactor: improve error handling in UTF-8 decoding functions test: add unit tests for KChar and KStr to ensure correct functionality and edge cases test: enhance UTF-8 decoding tests to cover various scenarios including invalid sequences and edge cases

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -57,8 +57,8 @@ coverage: $(SRC)
 ifneq ($(wildcard $(SRC)),)
 	$(CXX) $(SRC) $(CXXFLAGS) $(CONV_CXXFLAGS) $(LDFLAGS) -o $(BIN)
 	./$(BIN)
-	lcov --capture --directory ./$(BIN_DIR)/$(TEST_DIR_NAME) --directory ../build/debug --output-file $(COVERAGE_DIR)/$(TEST_DIR_NAME)/coverage.info --config-file $(PWD)/.lcovrc --ignore-errors unused
-	genhtml $(COVERAGE_DIR)/$(TEST_DIR_NAME)/coverage.info --output-directory $(COVERAGE_DIR)/$(TEST_DIR_NAME)
+	lcov --quiet --capture --directory ./$(BIN_DIR)/$(TEST_DIR_NAME) --directory ../build/debug --output-file $(COVERAGE_DIR)/$(TEST_DIR_NAME)/coverage.info --config-file $(PWD)/.lcovrc --ignore-errors unused
+	genhtml --quiet $(COVERAGE_DIR)/$(TEST_DIR_NAME)/coverage.info --output-directory $(COVERAGE_DIR)/$(TEST_DIR_NAME)
 	@echo "Coverage report generated for $(TEST) in $(COVERAGE_DIR)/$(TEST)"
 else
 	@echo "❌ Error: $(SRC) not found. Please check if '$(TEST_SRC_NAME).cpp' exists."
